Bugfix/empty custom annotations 3800 (#331)
* Fixed the bug; add unit test

* Clean up the code

* remove unused method AddPositionalAnnotation

--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -42,8 +42,8 @@
     },
     "SK bugfix": {
       "commandName": "Project",
-      "commandLineArgs": "-i E:\\Nirvana_resources\\test_runs\\test_Phantom\\test_data\\bugfix.vcf -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh37\\Refseq -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --vcf -o bugfix",
-      "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_Phantom"
+      "commandLineArgs": "-i E:\\Nirvana_resources\\test_runs\\test_bugfix\\test.vcf -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh37\\Refseq -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat -o test -sd CA_data/sa/",
+      "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_bugfix"
     },
     "SK Nirvana": {
       "commandName": "Project",
@@ -177,11 +177,6 @@
       "commandName": "Project",
       "commandLineArgs": "-i E:\\Nirvana_resources\\test_runs\\test_stop_lose\\del_over_stop.vcf -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh37\\Refseq -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat -o stop_lose",
       "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_stop_lose"
-    },
-    "SK Nirvana fail": {
-      "commandName": "Project",
-      "commandLineArgs": "-i E:\\Nirvana_resources\\test_runs\\test_Nirvana_fail\\smallcase1_ZRC5.vcf.gz -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh38\\Both -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat -o fail",
-      "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_Nirvana_fail\\"
     }
   }
 }
