Feature/gds support 3468 (#338)
* Update to enable GDS support in NirvanaLambda

* Support new representation of CA files

* Handle HTTP Request Forbidden Exception

* Make methods private when possible

* Add unit tests

* Add new method to S3Path and remove methods no longer used in this class

* Make sequence provider in custom annotation parser settable

* Refactoring

* Add sessiontoken to S3Path class

* Add Validate method to S3Path

* Better handling of possible exceptions when check the existance of a URL

* Add more sophisticated validation logic to S3Path

* Add GetPresignedUrl method to IS3Client

* Add expire date to presigned URL request

* Turn off S3 resource checking

* Fix custom SA URL checking bug

* Re-enable S3 bucket name checking

* Make pre-signed url validate for 1 hour in the validation method

* Fix a typo

* Better validation method; add unit tests

* remove unused using statement

* Move StringExtensions to Cloud project

* Handle S3 credential errors

* Fix issues in S3Path validation

* Clean the code

* Update NuGet packages; remove AccessDenied error code for credential validation

* Update S3Path validation and S3 exception handling

* Add S3 Region check

* Update NuGet packages

* Override ToString method for SaUrls

--- a/Cloud/Cloud.csproj
+++ b/Cloud/Cloud.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.3.101.1" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.102.3" />
   </ItemGroup>
 
   <ItemGroup>
