--- a/ErrorHandling/ErrorHandling.csproj
+++ b/ErrorHandling/ErrorHandling.csproj
@@ -5,4 +5,7 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <Import Project="..\VariantAnnotation\CommonAssemblyInfo.props" />
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.3.102.3" />
+  </ItemGroup>
 </Project>
