--- a/IO/IO.csproj
+++ b/IO/IO.csproj
@@ -11,7 +11,10 @@
   </PropertyGroup>
   <Import Project="..\VariantAnnotation\CommonAssemblyInfo.props" />
   <ItemGroup>
-    <PackageReference Include="AWSSDK.Core" Version="3.3.100.3" />
-    <PackageReference Include="AWSSDK.S3" Version="3.3.101.1" />
+    <PackageReference Include="AWSSDK.Core" Version="3.3.101.13" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.102.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ErrorHandling\ErrorHandling.csproj" />
   </ItemGroup>
 </Project>
