Bugfix/tabix hexa 3971 (#362)
* Cleaned up the resource files.

* New tabix functionality is working on a local file with the HEXA example. Still need to evaluate HTTP usage.

* All Tabix HasVariants trials now work.

--- a/Tabix/Tabix.csproj
+++ b/Tabix/Tabix.csproj
@@ -8,5 +8,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Compression\Compression.csproj" />
     <ProjectReference Include="..\Genome\Genome.csproj" />
+    <ProjectReference Include="..\OptimizedCore\OptimizedCore.csproj" />
   </ItemGroup>
 </Project>
