Feature/size and genomic position base partition 3965 (#364)
* Refactoring

* Update AnnotationRange class; refactoring

* Fix broken codes due to the change in AnnotationRange; Update the PreloadUtilities and fix the issue in out-of-range checkingl

* Make the End in AnnotationRange nullable

* Update VCF filter; Make it based on AnnotationRange and AnnotationRangeChecker

* Tabix linear index leading zeros fix

* Ignore empty chromosomes if specified

* Make general method to merge consecutive equal values

* Create genomic position and range class to take advantage of IChromosome interface; Add unit tests and fix broken unit tests

* Annotation range to genomic range

* Coding style

* Add override ToString function to annotation position and range

* Add variants checking and small range merging methods to PartitionUtilities method

* Fix a bug in merge small annotation ranges

* Refactoring

* Fix Sonarqube issues and update NuGet packages

* Formatting

* Fix Sonarqube issues

* Move ContigInfo to Genome

* Reduce network I/O during SA proloading

* Fix PreLoad bug; Add unit tests to position clustering method

* Fix null annotation item bug

* Fix position clustering bug

* Move PartitionUtilities to Nirvana Lambda repo

* Remove test class of Cloud/PartitionUtilities.cs

* Use NsaReader in the develop branch

--- a/Cloud/Cloud.csproj
+++ b/Cloud/Cloud.csproj
@@ -7,12 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.3.102.14" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.103.4" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.3.101.36" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Genome\Genome.csproj" />
     <ProjectReference Include="..\IO\IO.csproj" />
+    <ProjectReference Include="..\Tabix\Tabix.csproj" />
+    <ProjectReference Include="..\VariantAnnotation.Interface\VariantAnnotation.Interface.csproj" />
   </ItemGroup>
   <Import Project="..\VariantAnnotation\CommonAssemblyInfo.props" />
 </Project>
