--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -47,8 +47,8 @@
     },
     "SK Nirvana": {
       "commandName": "Project",
-      "commandLineArgs": " -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh38\\Both -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat -i E:/Nirvana_temp/Dragen_v3.2-Dragen-Pedigree-WG-hg38.chrM.vcf.gz --sd ./sd_0227 -o test --disable-recomposition",
-      "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_mitomap_regression_020719"
+      "commandLineArgs": " -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh38\\Both -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat -i E:\\Nirvana_resources\\temp\\miniHEXA.vcf.gz --sd E:\\Nirvana_resources\\gen_data\\gen_Omim\\2019-08-01\\GRCh38\\ -o test --disable-recomposition",
+      "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_omim_generation"
     },
     "SK Pedigree": {
       "commandName": "Project",
