--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -2,8 +2,8 @@
   "profiles": {
     "OMIM_SK": {
       "commandName": "Project",
-      "commandLineArgs": "SpliceAi --ref %Ref% --cache C:\\development\\Cache\\26\\GRCh37\\Both --in exome_spliceai_scores.vcf.gz --out %OutDir%",
-      "workingDirectory": "E:\\Nirvana_resources\\ExternalDataSources\\OMIM\\2017-08-15"
+      "commandLineArgs": "OMIM --ref  E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --uga E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\UGA.tsv.gz --out .",
+      "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_omim_generation"
     },
     "RR_omim": {
       "commandName": "Project",
