Bugfix/splice ai 4006 (#355)
* fixed splice intervals, choosing highest scoring entry for multiple genes

* updating to multi-gene schema

* resharper fixes

* identifying gene symbols that do not exist in cache

* updating gene symbols from our cache

* fixing crash in grch38 while creating gene forest

* adding gene synonym parsing from ncbi gene_info.gz

* fixing crashes

* format fixing

* one final bug fix

* adding unit tests

* adding gene tree from splice ai source material

* getting back to one pass method

* fixing bug in the spliceAiParser

* making sure the heap never contains more than one chrom simultaneously

* assuming that all items for a given position are stored together

* getting rid of the heap. Simple list will do for this case

* organizing code

--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -92,13 +92,18 @@
     },
     "RR_spliceAI": {
       "commandName": "Project",
-      "commandLineArgs": "SpliceAi --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --cache C:\\development\\Cache\\26\\GRCh38\\Both --in spliceai_scores.exome.hg38.vcf.gz --out c:\\Development\\SupplementaryDatabase\\test",
+      "commandLineArgs": "SpliceAi --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --cache C:\\development\\Cache\\26\\GRCh38\\Both --gene C:\\development\\ExternalDataSources\\SpliceAI\\human_gene_info.gz --in spliceai_scores.exome.hg38.vcf.gz --out c:\\Development\\SupplementaryDatabase\\test",
       "workingDirectory": "C:\\development\\ExternalDataSources\\SpliceAI\\GRCh38"
     },
     "RR_gnomadGenes": {
       "commandName": "Project",
       "commandLineArgs": "GnomadGeneScores --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --cache C:\\development\\Cache\\26\\GRCh37\\Both --in gnomad.v2.1.1.lof_metrics.by_gene.txt --out c:\\Development\\SupplementaryDatabase\\test",
       "workingDirectory": "C:\\development\\ExternalDataSources\\gnomAD\\2.1\\LoF_metrics"
+    },
+    "RR_spliceAi_37": {
+      "commandName": "Project",
+      "commandLineArgs": "SpliceAi --ref  c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --cache c:\\Development\\Cache\\26\\GRCh37\\Both --gene C:\\development\\ExternalDataSources\\SpliceAI\\human_gene_info.gz --in exome_spliceai_scores.vcf.gz --out c:\\Development\\SupplementaryDatabase\\test",
+      "workingDirectory": "C:\\development\\ExternalDataSources\\SpliceAI\\GRCh37"
     }
   }
 }
