--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -47,8 +47,8 @@
     },
     "SK Nirvana": {
       "commandName": "Project",
-      "commandLineArgs": " -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh38\\Both -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat -i E:/Nirvana_temp/Dragen_v3.2-Dragen-Pedigree-WG-hg38.chrM.vcf.gz --sd ./sd_0227 -o test --disable-recomposition",
-      "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_mitomap_regression_020719"
+      "commandLineArgs": " -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh37\\Both -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat -i E:\\Nirvana_resources\\test_runs\\test_covered_positions\\mock.vcf  -o test --disable-recomposition",
+      "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_covered_positions"
     },
     "SK Pedigree": {
       "commandName": "Project",
@@ -182,6 +182,11 @@
       "commandName": "Project",
       "commandLineArgs": "-i E:\\Nirvana_resources\\test_runs\\test_Nirvana_fail\\smallcase1_ZRC5.vcf.gz -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh38\\Both -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat -o fail",
       "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_Nirvana_fail\\"
+    },
+    "RR_canvas": {
+      "commandName": "Project",
+      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Both --sd C:\\Development\\SupplementaryDatabase\\52\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --in CanvasNS7-Canvas-Pedigree-WG-hg19.vcf.gz --out canvas322",
+      "workingDirectory": "c:\\development\\TestDatasets"
     }
   }
 }
