Feature/unified gnomad 3906 (#385)
* creating a joint gnomad generator

* saving codes so far

* creating the main merging method in gnomad parser

* testing the gnomad combiner

* adding tests for combining genome and exome entries

* unit testing the combined gnomad parser

* added male female an, ac, hc

* fixing infinite loop bug

* fixing bug caused by trimming and right aligning variants in gnomad reader

* handling bug with adding nullable ints

* handling conflicting entries

* removing items with 0 AN

* left rotating and resolving conflict at the gnomad reader

--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -12,8 +12,8 @@
     },
     "RR_gnomad": {
       "commandName": "Project",
-      "commandLineArgs": " Gnomad --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --out c:\\Development\\SupplementaryDatabase\\temp --in . --type genome",
-      "workingDirectory": "c:\\Development\\ExternalDataSources\\gnomAD\\GRCh38"
+      "commandLineArgs": " Gnomad --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --out c:\\Development\\SupplementaryDatabase\\test --genome genome\\ --exome exome\\",
+      "workingDirectory": "C:\\development\\ExternalDataSources\\gnomAD\\2.1\\GRCh37\\"
     },
     "RR_clingen": {
       "commandName": "Project",
