--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -92,8 +92,7 @@
     },
     "RR_spliceAI": {
       "commandName": "Project",
-      "commandLineArgs": "SpliceAi --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --cache C:\\development\\Cache\\26\\GRCh38\\Both --gene C:\\development\\ExternalDataSources\\SpliceAI\\human_gene_info.gz --in spliceai_scores.exome.hg38.vcf.gz --out c:\\Development\\SupplementaryDatabase\\test",
-      "workingDirectory": "C:\\development\\ExternalDataSources\\SpliceAI\\GRCh38"
+      "workingDirectory": "C:\\development\\ExternalDataSources\\PrimateAI\\0.2\\GRCh37"
     },
     "RR_gnomadGenes": {
       "commandName": "Project",
@@ -104,6 +103,11 @@
       "commandName": "Project",
       "commandLineArgs": "SpliceAi --ref  c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --cache c:\\Development\\Cache\\26\\GRCh37\\Both --gene C:\\development\\ExternalDataSources\\SpliceAI\\human_gene_info.gz --in exome_spliceai_scores.vcf.gz --out c:\\Development\\SupplementaryDatabase\\test",
       "workingDirectory": "C:\\development\\ExternalDataSources\\SpliceAI\\GRCh37"
+    },
+    "RR_primateAi": {
+      "commandName": "Project",
+      "commandLineArgs": "PrimateAi --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --cache C:\\development\\Cache\\26\\GRCh37\\Both --in PrimateAI_Percentiles_0.2_GRCh37.tsv.gz --out c:\\Development\\SupplementaryDatabase\\test",
+      "workingDirectory": "C:\\development\\ExternalDataSources\\PrimateAI\\0.2\\GRCh37"
     }
   }
 }
