--- a/VariantAnnotation/VariantAnnotation.csproj
+++ b/VariantAnnotation/VariantAnnotation.csproj
@@ -12,6 +12,7 @@
     <ProjectReference Include="..\IO\IO.csproj" />
     <ProjectReference Include="..\Jasix\Jasix.csproj" />
     <ProjectReference Include="..\OptimizedCore\OptimizedCore.csproj" />
+    <ProjectReference Include="..\RepeatExpansions\RepeatExpansions.csproj" />
     <ProjectReference Include="..\VariantAnnotation.Interface\VariantAnnotation.Interface.csproj" />
     <ProjectReference Include="..\Variants\Variants.csproj" />
   </ItemGroup>
