Feature/mito hetero 3477 (#412)
* adding mito hetero plasmy

* adding unit tests

* fixing alignments

* parsing the json object from bed file

* parsing json objects from bed file

* fixing json string

* testing for garbage pubmed id

* clinvar pubmedId parsing update

* adding on the fly zscore calculations. But lacking variant frequency. using dummy value for now

* testing the new micro-satellites

* updating microsatellite variants when possible

* removing commented code

* no null alleles allowed

--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -108,6 +108,11 @@
       "commandName": "Project",
       "commandLineArgs": "PrimateAi --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --cache C:\\development\\Cache\\26\\GRCh37\\Both --in PrimateAI_Percentiles_0.2_GRCh37.tsv.gz --out c:\\Development\\SupplementaryDatabase\\test",
       "workingDirectory": "C:\\development\\ExternalDataSources\\PrimateAI\\0.2\\GRCh37"
+    },
+    "RR_heteroplasmy": {
+      "commandName": "Project",
+      "commandLineArgs": "MitoHet --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --in coriell_GRCh37.MT.json.bed.gz --out c:\\Development\\SupplementaryDatabase\\test",
+      "workingDirectory": "c:\\development\\ExternalDataSources\\MitoHeteroplasmy"
     }
   }
 }
