--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -189,6 +189,16 @@
       "environmentVariables": {
         "NirvanaDataUrlBase": "https://ilmn-nirvana.s3-us-west-2.amazonaws.com/"
       }
+    },
+    "RR spliceAi-37": {
+      "commandName": "Project",
+      "commandLineArgs": "--cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --sd C:\\Development\\SupplementaryDatabase\\56\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in spliceAi-37.vcf --out spliceAi-37",
+      "workingDirectory": "c:\\development\\TestDatasets"
+    },
+    "RR spliceAi-38": {
+      "commandName": "Project",
+      "commandLineArgs": "--cache C:\\Development\\Cache\\26\\GRCh38\\Both --sd C:\\Development\\SupplementaryDatabase\\56\\GRCh38 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --disable-recomposition --in DQ-Strelka-Germline-chr22-hg38.vcf.gz --out dq",
+      "workingDirectory": "c:\\development\\TestDatasets"
     }
   }
 }
