--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -101,8 +101,8 @@
     },
     "RR_spliceAi_37": {
       "commandName": "Project",
-      "commandLineArgs": "SpliceAi --ref  c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --cache c:\\Development\\Cache\\26\\GRCh37\\Both --gene C:\\development\\ExternalDataSources\\SpliceAI\\human_gene_info.gz --in exome_spliceai_scores.vcf.gz --out c:\\Development\\SupplementaryDatabase\\test",
-      "workingDirectory": "C:\\development\\ExternalDataSources\\SpliceAI\\GRCh37"
+      "commandLineArgs": "SpliceAi --ref  c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --cache c:\\Development\\Cache\\26\\GRCh37\\Both --gene ..\\genesymbol_to_ensemblid.tsv --in mini.merged.vcf.gz --out c:\\Development\\SupplementaryDatabase\\test",
+      "workingDirectory": "C:\\development\\ExternalDataSources\\SpliceAI\\1.3\\GRCh37"
     },
     "SK_spliceAI": {
       "commandName": "Project",
@@ -126,8 +126,13 @@
     },
     "RR sa index": {
       "commandName": "Project",
-      "commandLineArgs": " index --ind C:\\development\\SupplementaryDatabase\\56\\GRCh38\\SpliceAi_20191004.nsa.old.idx --ver C:\\development\\ExternalDataSources\\SpliceAI\\1.3\\GRCh38\\spliceai_scores.masked.hg38.vcf.gz.version --out C:\\development\\SupplementaryDatabase\\56\\GRCh38\\SpliceAi_20191004.nsa.idx",
+      "commandLineArgs": " index --ind C:\\development\\SupplementaryDatabase\\56\\GRCh38\\SpliceAi_20191004.nsa.idx.old --ver C:\\development\\ExternalDataSources\\SpliceAI\\1.3\\GRCh38\\spliceai_scores.masked.hg38.vcf.gz.version --out C:\\development\\SupplementaryDatabase\\56\\GRCh38\\SpliceAi_20191004.nsa.idx",
       "workingDirectory": "C:\\development\\ExternalDataSources\\SpliceAI\\"
+    },
+    "RR_spliceAi-38": {
+      "commandName": "Project",
+      "commandLineArgs": "SpliceAi --ref  c:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --cache c:\\Development\\Cache\\26\\GRCh38\\Both --gene ..\\genesymbol_to_ensemblid.tsv --in miniSpliceAi.vcf --out c:\\Development\\SupplementaryDatabase\\test",
+      "workingDirectory": "C:\\development\\ExternalDataSources\\SpliceAI\\1.3\\GRCh38"
     }
   }
 }
