skipping shiftable entries from spliceAi (#473)
* skipping shiftable entries from spliceAi

* skipping the first exon start and last exon end point for splice intervals

* fixing bug in removing unwanted splice intervals

* fixing unit tests

* using the more optimal trimmer since shifting is  not required

--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -126,7 +126,7 @@
     },
     "RR sa index": {
       "commandName": "Project",
-      "commandLineArgs": " index --ind C:\\development\\SupplementaryDatabase\\56\\GRCh38\\SpliceAi_20191004.nsa.idx.old --ver C:\\development\\ExternalDataSources\\SpliceAI\\1.3\\GRCh38\\spliceai_scores.masked.hg38.vcf.gz.version --out C:\\development\\SupplementaryDatabase\\56\\GRCh38\\SpliceAi_20191004.nsa.idx",
+      "commandLineArgs": " index --ind C:\\development\\SupplementaryDatabase\\56\\GRCh38\\SpliceAiIndel_20191004.nsa.idx --ver C:\\development\\ExternalDataSources\\SpliceAI\\1.3\\GRCh38\\spliceai_scores.masked.hg38.vcf.gz.version --out C:\\development\\SupplementaryDatabase\\56\\GRCh38\\SpliceAi_1.3.nsa.idx",
       "workingDirectory": "C:\\development\\ExternalDataSources\\SpliceAI\\"
     },
     "RR_spliceAi-38": {
