--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -190,9 +190,14 @@
         "NirvanaDataUrlBase": "https://ilmn-nirvana.s3-us-west-2.amazonaws.com/"
       }
     },
+    "RR DQ strelka": {
+      "commandName": "Project",
+      "commandLineArgs": "--cache C:\\Development\\Cache\\26\\GRCh38\\Both --sd C:\\Development\\SupplementaryDatabase\\56\\GRCh38 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --in DQ-Strelka-Germline-chr22-hg38.vcf.gz --out dq",
+      "workingDirectory": "c:\\development\\TestDatasets"
+    },
     "RR spliceAi-37": {
       "commandName": "Project",
-      "commandLineArgs": "--cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --sd C:\\Development\\SupplementaryDatabase\\56\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in spliceAi-37.vcf --out spliceAi-37",
+      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --in spliceAi-37.vcf--out spliceAi-37",
       "workingDirectory": "c:\\development\\TestDatasets"
     },
     "RR spliceAi-38": {
