Feature/aa conservation 4248 (#480)
* sandbox: building transcript alignments

* ready to debug

* removing exon number check as some small exons may be skipped

* creating the AA con score creator

* creating conservation scores file

* creating protein conservation reader, writer

* grouping transcripts by ccds and outputting them

* separating conservation scores with commas- looks better

* reader and writer done. unit tests passing

* addiing provider

* writing without verification against cache

* adding protein conservation provider to transcipt anno provider

* AA conservation scores showing up. Need to discuss the conflicting scores

* removed duplicate scores

* removing try add in protein conservation provider

* renaming to make better sense

* ready to test the ucsc to ensembl mapping

* finding protein isoforms using protein matching

* need to re-organize to group by genes

* grouping peptides by genes

* working for grch38. need to fix the output format

* proper object output for aa conservation

* updating the parser for ucsc to ensembl mapping

* creating sa for 37

* matching solely on proteins with unique scores- no grouping by genes

* ready to push

* removing un-necessary functions

* removing reader writer test - its now obsolete

* removing call to overlapping transcripts in aa conservation

* removing un-necessary projects

* addressing change requests from pr

* using more lambda expressions

--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -32,8 +32,8 @@
     },
     "RR clinvar": {
       "commandName": "Project",
-      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --in ClinVar20150901_ShankarBugNIR1202-ClinVar_dbSNP-unknown-WG-hg19.vcf.gz --out clinvar --disable-recomposition",
-      "workingDirectory": "c:\\Development\\TestDatasets"
+      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat  --sd C:\\Development\\SupplementaryDatabase\\56\\GRCh37 --in ClinVar20150901_ShankarBugNIR1202-ClinVar_dbSNP-unknown-WG-hg19.vcf.gz --out clinvar",
+      "workingDirectory": "c:\\Development\\TestDatasets\\ClinvarSmoke"
     },
     "RR platypus": {
       "commandName": "Project",
@@ -200,7 +200,7 @@
       "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --in spliceAi-37.vcf--out spliceAi-37",
       "workingDirectory": "c:\\development\\TestDatasets"
     },
-    "RR spliceAi-38": {
+    "RR DQ-38": {
       "commandName": "Project",
       "commandLineArgs": "--cache C:\\Development\\Cache\\26\\GRCh38\\Both --sd C:\\Development\\SupplementaryDatabase\\56\\GRCh38 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --disable-recomposition --in DQ-Strelka-Germline-chr22-hg38.vcf.gz --out dq",
       "workingDirectory": "c:\\development\\TestDatasets"
