Feature/clinvar vcv 4446 (#485)
* adding xml parser for VCV records

* creating clinvar vcv parser

* creating joint stream of rcv and vcv items

* adding clinical significance to VCV records

* start full testing

* testing vcv and rcv together

* all tests passing

* vcvs are not gettins isAlleleSpecific tag

* ready for code review

* removing not required quantifiers

* sa version 57

* added duplicate check for json keys in nsa and nsi file groups

* debugging  a possible bug

* updating the min xml

* updating all RCV entries from the Jan 2020 xml

* updated xml files and unit tests

* getting significances in the output for VCV

* fixing typo, adding white spaces

--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -22,8 +22,8 @@
     },
     "RR_clinvar": {
       "commandName": "Project",
-      "commandLineArgs": " Clinvar --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --in ClinVarFullRelease_2019-02.xml.gz --out c:\\Development\\SupplementaryDatabase\\test",
-      "workingDirectory": "c:\\Development\\ExternalDataSources\\ClinVar\\20190206"
+      "commandLineArgs": " Clinvar --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --rcv ClinVarFullRelease_2020-01.xml.gz --vcv ClinVarVariationRelease_2020-01.xml.gz --out c:\\Development\\SupplementaryDatabase\\test",
+      "workingDirectory": "c:\\Development\\ExternalDataSources\\ClinVar\\20200130"
     },
     "RR_cosmic": {
       "commandName": "Project",
