--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -114,9 +114,9 @@
       "commandLineArgs": "--cache /Users/rroy1/development/Cache/26/GRCh38/Both --sd /Users/rroy1/development/SupplementaryDatabase/57/GRCh38 --ref /Users/rroy1/development/References/7/Homo_sapiens.GRCh38.Nirvana.dat --in strTest.vcf --out strTest",
       "workingDirectory": "/Users/rroy1/development/TestDatasets"
     },
-    "RR_dragen3.2": {
+    "RR_dragen3.3": {
       "commandName": "Project",
-      "commandLineArgs": "--cache /Users/rroy1/development/Cache/26/GRCh37/Ensembl --sd /Users/rroy1/development/SupplementaryDatabase/57/GRCh37 --ref /Users/rroy1/development/References/6/Homo_sapiens.GRCh37.Nirvana.dat --in paul_chrM.vcf.gz --out paul_M",
+      "commandLineArgs": "--cache /Users/rroy1/development/Cache/26/GRCh37/Ensembl --sd /Users/rroy1/development/SupplementaryDatabase/57/GRCh37 --ref /Users/rroy1/development/References/7/Homo_sapiens.GRCh37.Nirvana.dat --in Dragen_v3.3-Dragen-TumorNormal-WG-GRCh37.vcf.gz --out dragen-3.3-WG-37",
       "workingDirectory": "/Users/rroy1/development/TestDatasets"
     },
     "RR_dragen3.2_cnv": {
